[fix] redo saving data to database and add entity to get data from db